Added support for the Cell class, and implemented first gameboard graphics